[package]
name = "pong"
version = "0.1.0"
authors = ["Brighton Sikarskie <bsikar@tuta.io>"]
readme = "README.md"
description = " A simple GUI rust pong game"
homepage = "https://bsikar.github.io/pong/"
repository = "https://github.com/bsikar/pong"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.13"
